<resources>
    <string name="app_name">Food Point</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_bar">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="language_small">language</string>
    <string name="custom_app">Custom App</string>
    <string name="app">App</string>
    <string name="factory_settings">Factory settings</string>
    <string name="help">Help</string>
    <string name="app_version">App version</string>
    <string name="food_details">Food details</string>
    <string name="cartohydrates">Cartohydrates</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="why_it_s_superfood_for_you">Why it\'s superfood for you?</string>
    <string name="not_allergish_nutrinions">Not allergish nutrinions</string>
    <string name="allergish_nutritions">Allergish nutritions</string>
    <string name="home">Home</string>
    <string name="scan_again">Scan Again</string>
    <string name="welcome_to">Welcome to</string>
    <string name="random_food">Random Food</string>
    <string name="popular_today">Popular Today</string>
    <string name="check">Check</string>
    <string name="scan_food_barcode">Scan Food Barcode</string>
    <string name="place_barcode_inside_the_frame_to_scan_please_avoid_shake_to_get_results_quickly">Place barcode inside the frame to scan please avoid shake to get results quickly</string>
    <string name="click_to_scan">Click to scan...</string>
    <string name="or_enter_barcode_numbers_manually">Or enter barcode numbers manually</string>
    <string name="enter_barcode">Enter barcode...</string>
    <string name="show_food_details">Show food details</string>
    <string name="scanning_history">Scanning history</string>
    <string name="food_point_keep_your_last_history_to_keep_your_all_scared_history_rate_my_app_please">Food point keep your last history to keep your all scared history Rate my app please!</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="choose_lang">Choose Language</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure_mess">Are u sure to delete all your data and back to factory settings?</string>
    <string name="help_info">To start scanning products click on the orange icon in bottom menu. Then click on barcode image to scan or enter barcode number manually. App will be atomically show you food results if it exist in database else show dialog which contains error info</string>
</resources>