<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settingsBackButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:src="@drawable/back_arrow_v_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/settings_bar"
                android:textColor="@color/darkGray"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/segoeuib"
                android:gravity="center_vertical"
                android:paddingLeft="22dp"
                android:text="@string/custom_app"
                android:textColor="@color/medium_gray"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/ic_night_mode" />

            <TextView
                android:id="@+id/nightMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/night_mode"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/darkThemeSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:thumbTint="@color/orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/segoeuib"
                android:gravity="center_vertical"
                android:paddingLeft="22dp"
                android:text="@string/language_small"
                android:textColor="@color/medium_gray"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/setLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:text="@string/language"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:padding="5dp"
                android:rotation="180"
                android:src="@drawable/back_arrow_v_two"
                android:thumbTint="#4DACFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/segoeuib"
                android:gravity="center_vertical"
                android:paddingLeft="22dp"
                android:text="@string/app"
                android:textColor="@color/medium_gray"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setFactorySettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/ic_factory_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:text="@string/factory_settings"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:padding="5dp"
                android:rotation="180"
                android:src="@drawable/back_arrow_v_two"
                android:thumbTint="#4DACFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/helpDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/ic_help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:text="@string/help"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:padding="5dp"
                android:rotation="180"
                android:src="@drawable/back_arrow_v_two"
                android:thumbTint="#4DACFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/ic_app_version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:text="@string/app_version"
                android:textColor="@color/darkGray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:padding="5dp"
                android:rotation="180"
                android:src="@drawable/back_arrow_v_two"
                android:thumbTint="#4DACFF" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>